[tool.poetry]
name = "pyface4jmeter"
version = "0.1.0"
description = "a python interface for creating Jmeter scripts"
authors = ["Shaan Nagra"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
